--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "onft"
-version = "0.1.0"
+version = "0.1.0-beta.1"
 description = "Bespoke protocol and high-level implementation of Non-fungible token (NFT) technology 🚀"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
