--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ authors = ["Owen Griffiths <root@ogriffiths.com>"]
 edition = "2018"
 
 [dependencies]
+serde = { version = "1", features = ["derive"], optional = true }
 openssl = { version = "0.10", features = ["vendored"] }
